--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 h2 {
     text-align: center;
-    padding: 0px 40px 20px 10px;
+    padding: 0px 0px 20px 0px;
 }
 p {
     font-size: 12px;
@@ -50,7 +50,7 @@ select:focus {
 }
 .mainDiv {
     background-color: var(--mainDiv);
-    padding: 34px 64px 34px 64px;
+    padding: 25px;
 }
 #store {
     width: -webkit-fill-available;
@@ -70,8 +70,8 @@ textarea {
     resize: none;
     width: -webkit-fill-available;
     width: -moz-available;
-    height: 240px;
-    padding: 10px 10px 10px 10px;
+    height: 200px;
+    padding: 10px;
     box-sizing: border-box;
     font-family: monospace;
 }
