--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ select:focus {
 }
 .mainDiv {
     background-color: var(--mainDiv);
-    padding: 25px;
+    padding: 50px 25px 50px 25px;
 }
 #store {
     width: -webkit-fill-available;
